--- a/todolist-with-react-and-socketIO/client/src/index.css
+++ b/todolist-with-react-and-socketIO/client/src/index.css
@@ -28,7 +28,8 @@
 	width: 80%;
 	margin-right: 15px;
 }
-.form__cta {
+.form__cta,
+.home__form > button {
 	width: 200px;
 	cursor: pointer;
 	padding: 10px;
@@ -57,18 +58,7 @@
 	justify-content: space-between;
 	color: #06283d;
 }
-.todo__item:active {
-	background-color: #dff6ff;
-}
-.editBtn {
-	margin-right: 10px;
-	padding: 5px 10px;
-	background-color: #256d85;
-	border: none;
-	outline: none;
-	color: #fff;
-	cursor: pointer;
-}
+
 .deleteBtn {
 	padding: 5px 10px;
 	background-color: rgb(202, 22, 22);
@@ -77,9 +67,83 @@
 	color: #fff;
 	cursor: pointer;
 }
-.edit__container {
-	padding: 30px;
+.deleteBtn:hover {
+	color: rgb(202, 22, 22);
+	background-color: #fff;
 }
-.edit__header {
-	text-align: center;
+.commentsBtn {
+	padding: 5px 10px;
+	margin-right: 10px;
+	outline: none;
+	cursor: pointer;
+	border: none;
+	background-color: #fff;
+}
+.commentsBtn:hover {
+	background-color: #ddd;
+	border: 1px solid #000;
+}
+.modal {
+	min-height: 100vh;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	background-color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.modal__container {
+	width: 70%;
+	background-color: #fff;
+	min-height: 80vh;
+	padding: 30px;
+	border-radius: 3px;
+	border: 1px solid #333;
+}
+.modal__container > h3 {
+	margin-bottom: 30px;
+}
+.comment__form {
+	display: flex;
+	margin-bottom: 30px;
+	align-items: center;
+}
+.comment__form > input {
+	padding: 10px;
+	border: 1px solid #256d85;
+	width: 70%;
+	margin-right: 20px;
+}
+.comment {
+	margin-bottom: 5px;
+}
+.comment__form > button {
+	padding: 15px 20px;
+	cursor: pointer;
+	background-color: #256d85;
+	color: #fff;
+	outline: none;
+	border: none;
+	height: 45px;
+}
+.home {
+	width: 100%;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.home__form {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.home__form > * {
+	margin-bottom: 10px;
+}
+.home > h2 {
+	margin-bottom: 15px;
 }
